ferro-text/src/snapshots/ferro_text__tests__analyze_fallback.snap
---
source: ferro-text/src/lib.rs
expression: result
---
Sales Report
Fields: Revenue, Units
Note: Time-series and trend data has no full text representation in this channel.
