ferro-text/src/snapshots/ferro_text__tests__browse_full.snap
---
source: ferro-text/src/lib.rs
expression: result
---
Product
Fields:
  - Name
  - Price
  - Sku
