ferro-text/src/snapshots/ferro_text__tests__collect_full.snap
---
source: ferro-text/src/lib.rs
expression: result
---
Registration
Fields to fill in:
  - Email (required)
  - Name (required)
  - Phone
