ferro-text/src/snapshots/ferro_text__tests__focus_fallback.snap
---
source: ferro-text/src/lib.rs
expression: result
---
Profile
  - Avatar (image)
  - Website (link)
Note: This is a media/navigational view; full text representation is limited.
