ferro-text/src/snapshots/ferro_text__tests__process_brief.snap
---
source: ferro-text/src/lib.rs
expression: brief_out
---
approval_workflow — Currently: draft. You can: submit, approve, reject, cancel.
