ferro-text/src/snapshots/ferro_text__tests__process_filtered.snap
---
source: ferro-text/src/lib.rs
expression: result
---
approval_workflow — process

Currently: draft
Fields: Title, Status, Amount
Available actions: submit, cancel
