ferro-text/src/snapshots/ferro_text__tests__process_full.snap
---
source: ferro-text/src/lib.rs
expression: full_out
---
approval_workflow — process

Currently: draft
Fields: Title, Status, Amount
Available actions: submit, approve, reject, cancel
