ferro-text/src/snapshots/ferro_text__tests__summarize_full.snap
---
source: ferro-text/src/lib.rs
expression: result
---
Invoice
Key metrics: Total, Status, Items Count
