ferro-text/src/snapshots/ferro_text__tests__track_full.snap
---
source: ferro-text/src/lib.rs
expression: result
---
Shipment
Currently: pending
Next possible states: shipped
